--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "rallax.js": "^2.0.0",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0"
   }
